# tinyQ

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
src/tinyq/: benchmark.py  cli.py  config.py  data.py  export_onnx.py  model.py  quantize.py  report.py  train.py
tests/: test_data.py  test_model.py
